started moving the conversion from arabic to roman to a new file. Will do the same with the roman to arabic logic.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
-OBJECTS=RomanNumeralCalculator.o
+OBJECTS=RomanNumeralCalculator.o ArabicToRomanConverter.o
 
 .PHONY: all
 
 all: $(OBJECTS)
 
 RomanNumeralCalculator.c: RomanNumeralCalculator.h
-
+ArabicToRomanConverter.c: ArabicToRomanConverter.h
