Created structs for reach conversion and started writing tests for RomanToArabicConverter

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
-OBJECTS=RomanNumeralCalculator.o ArabicToRomanConverter.o
+
+OBJECTS = ArabicToRomanConverter.o RomanToArabicConverter.o RomanNumeralCalculator.o  
 
 .PHONY: all
 
 all: $(OBJECTS)
 
-RomanNumeralCalculator.c: RomanNumeralCalculator.h
+RomanNumeralCalculator.c: RomanNumeralCalculator.h 
 ArabicToRomanConverter.c: ArabicToRomanConverter.h
+RomanToArabicConverter.c: RomanToArabicConverter.h
