--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,13 @@
+
 CFLAGS =  `pkg-config --cflags check`
 LIBS = `pkg-config --libs check`
 VPATH=../src
 
-OBJECTS = RomanNumeralCalculator.o ArabicToRomanConverter.o
+OBJECTS = RomanNumeralCalculator.o ArabicToRomanConverter.o RomanToArabicConverter.o
+        
 
-TEST_OBJECTS = check_RomanNumeralCalculator.o check_ArabicToRomanConverter.o
+TEST_OBJECTS = check_RomanNumeralCalculator.o check_ArabicToRomanConverter.o \
+                check_RomanToArabicConverter.o
 
 test: test_roman
 	./test_roman
