started writing tests for validator

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,12 @@
 
-OBJECTS = Converter.o RomanNumeralCalculator.o  
+OBJECTS = Converter.o RomanNumeralCalculator.o RomanNumeralValidator.o 
 
 .PHONY: all
 
 all: $(OBJECTS)
 
 RomanNumeralCalculator.c: RomanNumeralCalculator.h 
+RomanNumeralValidator.c: RomanNumeralValidator.h
 Converter.c: Converter.h
 
 clean:
