--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ all: roman_calculator
 
 clean:
 	rm -f *.o
+	rm -f roman_calculator
 
 roman_calculator: $(OBJECTS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
