added App logic file. moved logic from Calculator to App

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 
-OBJECTS = Converter.o RomanNumeralValidator.o RomanNumeralCalculator.o main.o
+OBJECTS = Converter.o RomanNumeralValidator.o RomanNumeralCalculator.o App.o main.o
 
 CFLAGS = -g
 
@@ -10,10 +10,11 @@ all: roman_calculator
 clean:
 	rm -f *.o
 	rm -f ../roman_calculator
-	rm -f roman_calculator
 
 roman_calculator: $(OBJECTS)
 	$(CC) $(CFLAGS) -o ../$@ $^ $(LIBS)
+
+App.c: App.h
 
 Converter.c: Converter.h
 
