--- a/test/Makefile
+++ b/test/Makefile
@@ -3,10 +3,10 @@ CFLAGS =  `pkg-config --cflags check`
 LIBS = `pkg-config --libs check`
 VPATH=../src
         
-TEST_OBJECTS = check_RomanNumeralCalculator.o check_Converter.o \
-                check_RomanNumeralValidator.o check_App.o
+TEST_OBJECTS = check_RomanNumeralCalculator.o check_ArabicToRomanConverter.o \
+                check_RomanToArabicConverter.o check_RomanNumeralValidator.o check_App.o
 
-OBJECTS = Converter.o RomanNumeralValidator.o RomanNumeralCalculator.o App.o
+OBJECTS = ArabicToRoman.o ArabicToRomanConverter.o RomanToArabicConverter.o RomanNumeralValidator.o RomanNumeralCalculator.o App.o
 
 .PHONY: clean test 
 
